# Detection-SARWAI

./: .gitignore  README.md  human.yaml  location_test.yaml  multirobot.launch  premade_query.yaml  script.sh  start.sh  update-stations.sh  visual-iris-log.txt
image_draw/: CMakeLists.txt
image_draw/src/: image_listener.cpp
src/audio_trigger_node/: CMakeLists.txt  package.xml  setup.py
src/audio_trigger_node/src/: audio_trigger.py
src/darknet_ros/darknet_ros/: CMakeLists.txt  package.xml
src/detection_logger/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/detection_logger/include/: audio_logger.h  audio_logging_strategy.h  audio_metadata.h  box_data_saver.h  box_metadata.h  detection_logger.h  image_logging_strategy.h  image_saver.h  local_box_data_saver.h  local_image_logging_strategy.h  local_image_saver.h  local_logging_strategy.h  logger.h  logging_strategy.h  logging_strategy_registry.h  metadata_saver.h  socketio_audio_logger.h  socketio_visual_logger.h  visual_logger.h
src/detection_logger/include/audio/: audio_logging_strategy.h  audio_metadata.h  local_audio_logging_strategy.h
src/detection_logger/include/visual/: box_metadata.h  image_logging_strategy.h  local_image_logging_strategy.h
src/detection_logger/src/: audio_logger.cc  audio_logger_node.cc  box_data_saver.cpp  detection_logger.cc  detection_logger_node.cc  detection_logger_node.cpp  image_saver.cpp  local_box_data_saver.cc  local_image_logging_strategy.cc  local_image_saver.cc  local_logging_strategy.cc  logger.cc  logging_strategy.cpp  logging_strategy_registry.cc  socketio_audio_logger.cc  socketio_visual_logger.cc  visual_logger.cc  visual_logger_node.cc
src/detection_logger/src/audio/: local_audio_logging_strategy.cc
src/detection_logger/src/visual/: local_box_data_saver.cc  local_image_logging_strategy.cc
src/detection_msgs/: CMakeLists.txt  package.xml
src/detection_msgs/msg/: AudioDetection.msg  CompiledMessage.msg  DetectionPointImage.msg  ImageBoundingBox.msg  ProcessedAudioDetection.msg  ProcessedVisualDetection.msg
src/image_draw/: CMakeLists.txt  package.xml
src/image_draw/include/: detection_tracker.h  image_bounding_box_merger.h  publish.h  visual_detection_tracker.h
src/image_draw/msg/: info.msg
src/image_draw/src/: detection_tracker.cc  image_bounding_box_merger.cc  image_listener.cpp  publish.cpp  visual_detection_tracker.cc
src/normalization_tester/: CMakeLists.txt  package.xml
src/normalization_tester/src/: normalization_tester_node.cpp
src/pointcloud_depth_calculator/: CMakeLists.txt  package.xml
src/pointcloud_depth_calculator/include/: depth_calculator.h
src/pointcloud_depth_calculator/src/: depth_calculator.cpp  pointcloud_depth_calculator_node.cpp
src/pointcloud_image_conversions/: CMakeLists.txt  package.xml
src/pointcloud_image_conversions/include/: pointcloud_image_conversions.h
src/pointcloud_normalizer/: CMakeLists.txt  package.xml
src/tracker/: CMakeLists.txt  package.xml
src/tracker/include/: detection_aggregator.h  detection_frame_id.h  detection_tracker.h  face_classifier_manager.h  face_identifier_model.h
src/tracker/launch/: tracker-multirobot.launch
src/tracker/src/: detection_comparer.cc  detection_frame_id.cc  detection_tracker.cc  face_classifier_manager.cc  face_identifier_model.cc  image_tracker.cpp
world-parser/: jacaranda_v3_v2_humans_XML.xml  parse-world-file.js  people.json  walls.json
(+22 files in other folders)
